--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -50,10 +50,10 @@
 
 @media screen and (max-width: 768px) {
     .container {
-        top: 10%;
-        margin-left: 8%;
+        top: 15%;
         flex-direction: column;
-        width: 100%;
+        width: 95%;
+        margin-left: 5%;
     }
 
     .left-data,
@@ -71,6 +71,7 @@
 
     .right-data {
         margin-top: 0;
+        display: block;
     }
 
     .neon-button {
