--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -5,7 +5,7 @@
     position: fixed;
     width: 100%;
     z-index: 10;
-    transition: box-shadow 0.3s ease;
+    background-color: #fff;
 }
 
 .left-side {
@@ -55,12 +55,11 @@
     .nav-links {
         display: none;
         position: absolute;
-        top: 100%;
+        top: 99%;
         left: 0;
         background-color: #fff;
         width: 100%;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        z-index: 999;
+        z-index: 10;
     }
 
     .nav-links.active {
