--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -8,6 +8,7 @@
     background-color: #fff;
 }
 
+
 .left-side {
     font-size: 1.7rem;
     margin-left: 10%;
@@ -34,6 +35,30 @@
 .link:hover {
     color: #333333;
 }
+
+.nav-links .link {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    position: relative;
+}
+
+.nav-links .link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1.5px;
+    background: black;
+    transition: width 0.3s ease;
+    position: absolute;
+    bottom: 0;
+    margin-left: 7px;
+}
+
+.nav-links .link:hover::after {
+    width: 100%;
+}
+
 
 .hamburger-menu {
     display: none;
