--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -75,7 +75,6 @@
     background-color: #f0f0f0;
     border: none;
     padding: 10px 20px;
-    margin-right: 10px;
     cursor: pointer;
     outline: none;
     border-radius: 5px;
@@ -118,11 +117,12 @@
     }
 
     .section button {
-        margin-left: 10px;
+        margin-left: 8px;
     }
 
     .section-btn {
         margin-right: 0;
         margin-bottom: 5px;
+        padding: 10px 10px;
     }
 }
