--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,6 +1,5 @@
 .about {
-    position: absolute;
-    top: 80%;
+    position: relative;
     display: flex;
     margin-left: 8%;
     justify-content: space-between;
@@ -8,6 +7,8 @@
     padding-bottom: 30px;
     gap: 3rem;
     margin-right: 8%;
+    margin-top: 7rem;
+    margin-bottom: 3rem;
 }
 
 .about .content {
@@ -49,7 +50,7 @@
 }
 
 .social-icons .linkedln:hover {
-    color: rgb(7, 54, 240);
+    color: #0077b5;
 }
 
 .about .skills {
@@ -86,7 +87,7 @@
 
 .section-content {
     display: none;
-    margin-top: 10px;
+    margin-top: 45px;
 }
 
 .section-content.active {
