--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,6 +1,6 @@
 .container {
-    position: absolute;
-    margin-top: 14%;
+    position: relative;
+    padding-top: 14%;
     margin-left: 10%;
     display: flex;
     width: 80%;
