--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -14,6 +14,11 @@
     margin-left: 10%;
 }
 
+.left-side a {
+    text-decoration: none;
+    color: #161616;
+}
+
 .right-side {
     display: flex;
     align-items: center;
