--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -104,6 +104,16 @@
     margin-left: 20px;
 }
 
+@media screen and (max-width:1200px) {
+    .about .content {
+        height: auto;
+    }
+
+    .about .skills {
+        height: auto;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .about {
         flex-direction: column;
@@ -111,10 +121,16 @@
         margin: 0;
     }
 
-    .about .content,
-    .about .skills {
+    .about .content {
         width: 100%;
         height: auto;
+        margin-top: 35%;
+    }
+
+    .about .skills {
+        width: 100%;
+        height: 25rem;
+        margin-bottom: 50px;
     }
 
     .section button {
@@ -125,5 +141,17 @@
         margin-right: 0;
         margin-bottom: 5px;
         padding: 10px 10px;
+    }
+}
+
+@media screen and (max-width:420px) {
+    .about .skills {
+        height: 26.5rem;
+    }
+}
+
+@media screen and (max-width:420px) {
+    .about .skills {
+        height: 40rem;
     }
 }
