--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -49,8 +49,6 @@
 }
 
 @media(min-width:1200px) {
-
-
     .left-data {
         width: 60%;
     }
@@ -62,9 +60,8 @@
 
 @media(min-width:900px)and (max-width:1100px) {
     .container {
-        margin-top: 30%;
+        padding-top: 30%;
         margin-left: 5%;
-        padding: 0;
         width: 100%;
     }
 
@@ -90,9 +87,8 @@
 
 @media(min-width:768px)and (max-width:900px) {
     .container {
-        margin-top: 30%;
+        padding-top: 30%;
         margin-left: 5%;
-        padding: 0;
         width: 100%;
     }
 
@@ -118,7 +114,7 @@
 
 @media(max-width: 767px) {
     .container {
-        top: 20%;
+        padding-top: 40%;
         flex-direction: column;
         width: 95%;
         margin-left: 5%;
@@ -138,7 +134,7 @@
     }
 
     .right-data {
-        margin-top: 0;
+        margin-top: 20px;
         display: block;
     }
 
