--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -8,7 +8,7 @@
     gap: 3rem;
     margin-right: 8%;
     margin-top: 7rem;
-    margin-bottom: 3rem;
+    padding-bottom: 12rem;
 }
 
 .about .content {
@@ -147,11 +147,5 @@
 @media screen and (max-width:420px) {
     .about .skills {
         height: 26.5rem;
-    }
-}
-
-@media screen and (max-width:420px) {
-    .about .skills {
-        height: 40rem;
     }
 }
