--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -81,6 +81,7 @@
 @media(max-width:768px) {
     .contact {
         margin-top: 40%;
+        margin-bottom: 20%;
     }
 
     .contact-container {
