--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -122,7 +122,7 @@
     .about .content {
         width: 100%;
         height: auto;
-        margin-top: 25%;
+        margin-top: 3rem;
     }
 
     .about .skills {
