--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -77,3 +77,10 @@
     text-decoration: none;
     color: #fff;
 }
+
+@media(max-width:768px) {
+    .project {
+        margin-top: 30%;
+        padding-bottom: 40%;
+    }
+}
