--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -87,6 +87,10 @@
         display: none;
     }
 
+    .link::after {
+        display: none;
+    }
+
     .navbar {
         height: 60px;
     }
