--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -127,7 +127,7 @@
 
     .about .skills {
         width: 100%;
-        height: 27rem;
+        height: auto;
     }
 
     .section button {
@@ -143,6 +143,6 @@
 
 @media screen and (max-width:420px) {
     .about .skills {
-        height: 28rem;
+        height: 29rem;
     }
 }
